--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+    border: 0;
+  background-color: transparent;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+    font-family: 'Roboto Mono', monospace;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+    color: inherit;
+    text-decoration: none;
+    width: 100%;
+    white-space:nowrap;
+    padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+    font-size: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+    height: 70px;
+    display: flex;
+    width: 100%;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+    padding:0 2em;
+    box-shadow: 5px 1px 5px;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    text-align: center;
+}
+
+.toggle {
+    display: none;
+}
+
+
+@media screen and (max-width: 768px) {
+    header {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .flex {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    nav {
+        flex-direction: column;
+        width: 100%;
+        display: none;
+        padding-bottom: 1em;
+    }
+
+    nav a:hover {
+        background-color: aqua;
+        border-radius: 5px;
+    }
+
+    .toggle{
+        display: block;
+    }
+
+    nav.active{
+        display: flex;
+    }
 }
