--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
-.material-symbols-outlined {
+/* .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
-}
+} */
 
 button{
-    border: 0;
   background-color: transparent;
 }
 
@@ -15,12 +14,30 @@ button{
     font-family: 'Roboto Mono', monospace;
 }
 
+img {
+    position:fixed;
+    bottom:0;
+    width: 80%;
+}
+
 a {
+    display: flex;
     color: inherit;
     text-decoration: none;
-    width: 100%;
+    width: 20%;
     white-space:nowrap;
-    padding: 5px;
+    transition: 0.2s;
+    height: 50%;
+    font-size: 1.2em;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
+a:hover{
+    width: 40%;
+    color:white;
+    background-color: gold;
 }
 
 .logo {
@@ -30,16 +47,15 @@ a {
 header {
     height: 70px;
     display: flex;
-    width: 100%;
     box-sizing: border-box;
-    justify-content: space-between;
-    align-items: center;
     padding:0 2em;
     box-shadow: 5px 1px 5px;
 }
 
 nav {
     display: flex;
+    margin:0 auto;
+    width: 100%;
     justify-content: center;
     align-items: center;
     gap: 1em;
